# swagger.json
@@ -87,6 +87,47 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/posts/popular/{topic}": {
+      "get": {
+        "tags": [
+          "Posts"
+        ],
+        "summary": "Returns the expired posts for a topic",
+        "description": "Returns the expired posts for a topic in the collection",
+        "parameters": [
+          {
+            "name": "topic",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "This is the topic to filter the posts from the collection"
+          },
+          {
+            "name": "auth-token",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -299,32 +340,6 @@
                 }
               }
             }
-          }
-        }
-      }
-    },
-    "/api/posts/popular": {
-      "get": {
-        "tags": [
-          "Posts"
-        ],
-        "summary": "Returns the most popular post",
-        "description": "Returns the most popular post in the collection",
-        "parameters": [
-          {
-            "name": "auth-token",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
